--- a/index.html
+++ b/index.html
@@ -1,16 +1,86 @@
 <!DOCTYPE html>
 <html>
+<!--Meta-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/materialize.css">
 </head>
+<!--End META-->
+
 <body>
-    <h1>Oh yeah Baby</h1>
-    <img src="Allen.jpg">
-    
+    <!--START PAGE-->
+    <!--SIDE BAR-->
+    <div class="wrapper sideWrap" id="sidebar">
+
+        <!--Container-->
+        <div class="container" id="sideContainer">
+            <!--Row #1-->
+            <div class="row sideRow" id="sideRowFirst">
+                <div class="col m12">
+                    <h1 class="sidebarHeader">Side Bar</h1>
+                </div>
+            </div>
+            <!--/Row #1-->
+            <!--Row #1-->
+            <div class="row sideRow" id="sideRowSecond">
+                <div class="col m12">
+                    <button class="btn black white-text" style="text-align: center;" id="sideSlide">Side
+                        Bar</button>
+                </div>
+            </div>
+            <!--/Row #1-->
+            <!--Row #2-->
+            <div class="row sideRow" id="sideRowThird">
+                <div class="col m3 purple">
+                    <h3>1</h3>
+                </div>
+                <div class="col m3 green">
+                    <h3>2</h3>
+                </div>
+                <div class="col m3 blue">
+                    <h3>3</h3>
+                </div>
+                <div class="col m3 yellow">
+                    <h3>4</h3>
+                </div>
+            </div>
+            <!--/Row #2-->
+        </div>
+        <!--/Container-->
+    </div>
+    <!--END SIDE BAR-->
+
+    <div class="mainWrap">
+        <button class="btn" id="showSideButton"> Toggle Sidebar</button>
+    </div>
+
+    <!--SECTION-->
+    <!--END SECTION-->
+
+    <!--SECTION-->
+    <!--END SECTION-->
+
+    <!--SECTION-->
+    <!--END SECTION-->
+
+
+
+    <!--JAVASCRIPT LINKS-->
+
+    <!-- Added link to the jQuery Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--Materialize-->
+    <script src="./assets/javascript/main.js"></script>
+    <script src="assets/javascript/materialize.js"></script>
+    <!--Phaser-->
+    <script src="./assets/javascript/phaser.js"></script>
+    <!--My Javascript-->
+
 </body>
+
 </html>
