--- a/index.html
+++ b/index.html
@@ -18,45 +18,13 @@
     <div class="wrapper sideWrap" id="sidebar">
 
         <!--Container-->
-        <div class="container" id="sideContainer">
-            <!--Row #1-->
-            <div class="row sideRow" id="sideRowFirst">
-                <div class="col m12">
-                    <h1 class="sidebarHeader">Side Bar</h1>
-                </div>
-            </div>
-            <!--/Row #1-->
-            <!--Row #1-->
-            <div class="row sideRow" id="sideRowSecond">
-                <div class="col m12">
-                    <button class="btn black white-text" style="text-align: center;" id="sideSlide">Side
-                        Bar</button>
-                </div>
-            </div>
-            <!--/Row #1-->
-            <!--Row #2-->
-            <div class="row sideRow" id="sideRowThird">
-                <div class="col m3 purple">
-                    <h3>1</h3>
-                </div>
-                <div class="col m3 green">
-                    <h3>2</h3>
-                </div>
-                <div class="col m3 blue">
-                    <h3>3</h3>
-                </div>
-                <div class="col m3 yellow">
-                    <h3>4</h3>
-                </div>
-            </div>
-            <!--/Row #2-->
-        </div>
+
         <!--/Container-->
     </div>
     <!--END SIDE BAR-->
 
     <div class="mainWrap">
-        <button class="btn" id="showSideButton"> Toggle Sidebar</button>
+
     </div>
 
     <!--SECTION-->
@@ -80,7 +48,7 @@
     <!--Phaser-->
     <script src="./assets/javascript/phaser.js"></script>
     <!--My Javascript-->
-    <script src="./assets/javascript/main.js"></script>
+    <script src="./assets/javascript/building.js"></script>
 </body>
 
 </html>
