Got the canvas to print text depending on the question - took me all morning so this is to much to explain on here but basically constructed a function to construct the questions depending on a round number and a boolean

--- a/index.html
+++ b/index.html
@@ -14,41 +14,24 @@
 
 <body>
     <!--START PAGE-->
-    <!--SIDE BAR-->
-    <div class="wrapper sideWrap" id="sidebar">
 
-        <!--Container-->
-
-        <!--/Container-->
-    </div>
-    <!--END SIDE BAR-->
-
-    <div class="mainWrap">
-
-    </div>
-
-    <!--SECTION-->
-    <!--END SECTION-->
-
-    <!--SECTION-->
-    <!--END SECTION-->
-
-    <!--SECTION-->
-    <!--END SECTION-->
-
-
+    <div class="wrapper sideWrap" id="sidebar"></div>
+    <div class="mainWrap"></div>
 
     <!--JAVASCRIPT LINKS-->
 
     <!-- Added link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--Materialize-->
 
-    <script src="assets/javascript/materialize.js"></script>
+    <!--Materialize-->
+    <script src="./assets/javascript/materialize.js"></script>
     <!--Phaser-->
     <script src="./assets/javascript/phaser.js"></script>
+    <!--Added jCanvas-->
+    <script src="./assets/javascript/jcanvas.js"></script>
     <!--My Javascript-->
     <script src="./assets/javascript/building.js"></script>
+
 </body>
 
 </html>
