Got it to reset using one of the game function switches

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--Materialize-->
     <script src="./assets/javascript/materialize.js"></script>
     <!--Phaser-->
-    <script src="./assets/javascript/phaser.js"></script>
+    <!-- <script src="./assets/javascript/phaser.js"></script> -->
     <!--Added jCanvas-->
     <script src="./assets/javascript/jcanvas.js"></script>
     <!--My Javascript-->
