--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/materialize.css">
-    <link href="https://fonts.googleapis.com/css?family=Gugi|Montserrat|Wendy+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Gugi|Montserrat|Wendy+One" rel="stylesheet">
 </head>
 
 <body>
